--- a/client_side/src/components/Navbar/navbar.module.css
+++ b/client_side/src/components/Navbar/navbar.module.css
@@ -37,8 +37,20 @@
 .sticky {
   position: fixed;
   top: 0;
-  width: 100%;
+  right: 0;
+  left: 0;
   z-index: 10;
+}
+
+@media only screen and (max-width: 740px) {
+  .shopBag button {
+    width: 40px;
+    height: 40px;
+  }
+
+  .badge {
+    font-size: 0.7em;
+  }
 }
 
 @media print {
