--- a/client_side/src/components/ProductItem/productItem.module.css
+++ b/client_side/src/components/ProductItem/productItem.module.css
@@ -98,4 +98,9 @@ input[type="number"]:focus {
     padding: 0.3em;
     gap: 0.8em;
   }
+
+  .editContainer {
+    font-size: 0.8em;
+    gap: 0;
+  }
 }
